Fixed how-it-works overlap

--- a/public/stylesheets/invitefriends.css
+++ b/public/stylesheets/invitefriends.css
@@ -221,7 +221,11 @@
         padding: 3.3vh 0px;
     }
     .prompt-container .icon-container {
-        margin-bottom: 2vh;
+        margin-bottom: -1vh;
+    }
+    .button-container {
+        margin-bottom: -1vh;
+
     }
     .prompt-container .info-container .bullet h2 {
         font-size: 4.14vw;
